<resources>
    <string name="google_maps_api_key">AIzaSyDpEJ0rTp4MI3EBgSZN6-RrzH8kw-Kyj5A</string>

    <string name="app_name">Ski Talk</string>
    <string name="home_page">Home Page</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="authenticating">Authenticating...</string>
    <string name="wrong_credentials_title">Wrong Credential</string>
    <string name="wrong_credentials_text">Please insert valid username and password.</string>
    <string name="signin_problem_title">There is a problem</string>
    <string name="signin_problem_text">Please fill all the fields.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading content...</string>
    <string name="create_group_problem_title">Ouch!</string>
    <string name="create_group_problem_text">Insert at least one person in your group.</string>
    <string name="group_name_hint">Name of the Group</string>
    <string name="select_picture">Select Picture</string>
    <string name="next">NEXT</string>
    <string name="new_group">New Group</string>
    <string name="user_name_hint">Type the nickname of a user</string>
    <string name="create_group">CREATE</string>
    <string name="loading_user">Loading user data...</string>
    <string name="no_users_found_title">Ooops!</string>
    <string name="no_users_found_text">There are no user with that nickname.</string>
    <string name="already_inserted_user_title">Oooops!</string>
    <string name="already_inserted_user_text">You have already select this user.</string>
    <string name="creating_group">Creating group...</string>
    <string name="adding_members">Adding members...</string>
    <string name="add">ADD</string>
    <string name="tab_talk">Talk</string>
    <string name="tab_map">Map</string>
    <string name="tab_members">Members</string>
    <string name="leave_group">Leave group</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="email_colon">Email:</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_colon">Nickname:</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="members_colon">Members:</string>
    <string name="search_results">Search results:</string>
    <string name="default_password">default</string>
    <string name="upload">Uploading contents...</string>
    <string name="upload_picture">Uploading picture...</string>
    <string name="online">online</string>
    <string name="offline">offline</string>

    <string name="saved_active_group_id">saved_active_group_id</string>

    <string name="facebook_app_id">219483198576816</string>
    <string name="fb_login_protocol_scheme">fb219483198576816</string>


</resources>
